--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p id="status">Enter the Metaverse</p>
+	<h1 id="result"></h1>
+	<button id="enterBtn">Enter</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
